# vector-retrieval-engine

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/core/: config.py  exceptions.py  logging.py
app/search/: chunking.py  embedder.py  ingestion.py  router.py  schemas.py  service.py  store.py
data/raw/: asyncio-lock-patterns.md  cosine-similarity.md  docker-multistage-python.md  embeddings-overview.md  faiss-index-types.md  fastapi-async-basics.md  httpx-async-client.md  modern-type-hints.md  mypy-strict-mode.md  poetry-vs-uv.md  pre-commit-workflow.md  pydantic-v2-validators.md  pytest-asyncio-mode.md  python-312-features.md  rag-architecture.md  ruff-linter.md  sentence-transformers-intro.md  structured-logging-python.md  text-chunking-strategies.md  uv-package-manager.md
tests/: conftest.py  test_benchmark.py  test_chunking.py  test_config.py  test_embedder.py  test_exceptions.py  test_health.py  test_ingestion.py  test_logging.py  test_middlewares.py  test_router.py  test_schemas.py  test_service.py  test_store.py
