[project]
name = "vector-retrieval-engine"
version = "0.1.0"
description = "API REST de busca semântica com sentence-transformers e FAISS"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "ThiagoDev202" }]
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.32,<1.0",
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.6,<3.0",
    "sentence-transformers>=3.3,<4.0",
    "faiss-cpu>=1.9,<2.0",
    "numpy>=1.26,<3.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8,<1.0",
    "mypy>=1.13,<2.0",
    "pytest>=9.0.3,<10.0",
    "pytest-asyncio>=1.0,<2.0",
    "pytest-cov>=6.0,<7.0",
    "coverage>=7.6,<8.0",
    "httpx>=0.28,<1.0",
    "pip-audit>=2.7,<3.0",
    "pre-commit>=4.0,<5.0",
    "types-PyYAML>=6.0,<7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["data", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
pretty = true

[[tool.mypy.overrides]]
module = ["faiss", "faiss.*", "sentence_transformers", "sentence_transformers.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "benchmark: benchmark offline (pode ser lento; use -s para ver números)",
]
filterwarnings = [
    "ignore::DeprecationWarning:pydantic.*",
]

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
